--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,15 +13,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'
+        
+      - name: Setup MSBuild path
+        uses: microsoft/setup-msbuild@v2
 
       - name: Build project
-        run: dotnet build --configuration Release -p:EnableWindowsTargeting=true
-
+        run: msbuild iCloudMonkey/iCloudMonkey.csproj /p:Configuration=Release
+    
       - name: Zip compiled output
         run: |
           mkdir output
